--- a/style.css
+++ b/style.css
@@ -311,13 +311,7 @@ header {
 }
 
 
-.choose-destination__img-1,
-.choose-destination__img-2,
-.choose-destination__img-3,
-.choose-destination__img-4,
-.choose-destination__img-5,
-.choose-destination__img-6,
-.choose-destination__img-7 {
+.grid-img{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -331,17 +325,6 @@ header {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
-}
-
-.choose-destination__img-1 { grid-area: image-1; background-image: url(Images/Maldives.png); }
-.choose-destination__img-2 { grid-area: image-2; background-image: url(Images/Indonesia.png); }
-.choose-destination__img-3 { grid-area: image-3; background-image: url(Images/Srilanka.png); }
-.choose-destination__img-4 { grid-area: image-4; background-image: url(Images/North-America.png); }
-.choose-destination__img-5 { grid-area: image-5; background-image: url(Images/Kashmir.png); }
-.choose-destination__img-6 { grid-area: image-6; background-image: url(Images/Bangladesh.png); }
-.choose-destination__img-7 { grid-area: image-7; background-image: url(Images/Bandarban.png); }
-
-.grid-img {
     cursor: pointer;
     transition: transform 0.3s ease, color 0.3s ease;
 }
@@ -352,9 +335,17 @@ header {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
+.choose-destination__img-1 { grid-area: image-1; background-image: url(Images/Maldives.png); }
+.choose-destination__img-2 { grid-area: image-2; background-image: url(Images/Indonesia.png); }
+.choose-destination__img-3 { grid-area: image-3; background-image: url(Images/Srilanka.png); }
+.choose-destination__img-4 { grid-area: image-4; background-image: url(Images/North-America.png); }
+.choose-destination__img-5 { grid-area: image-5; background-image: url(Images/Kashmir.png); }
+.choose-destination__img-6 { grid-area: image-6; background-image: url(Images/Bangladesh.png); }
+.choose-destination__img-7 { grid-area: image-7; background-image: url(Images/Bandarban.png); }
+
 /* choose your destination section styles ends here  */
 
-/* --------------------------------------------------------------------------------------------
+/* --------------------------------------------------------------------------------------------------
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 ______________________________________________________________________________________________ */
 
@@ -476,5 +467,47 @@ ________________________________________________________________________________
         height: auto;
     }
 
-   
+    /* choose your destination section responsiveness starts here  */
+    .choose-destination-wrapper{
+        margin-top: 24px;
+    }
+    .choose-destination__texts{
+        width: 100%;
+        height: auto;
+    }
+
+    .choose-destination__texts h2{
+        padding-bottom: 16px;
+    }
+    
+    .choose-destination__texts p{
+        margin-bottom: 16px;
+    }
+
+    .choose-destination__texts h2{
+        font-size: 20px;
+    }
+
+    .choose-destination__texts p{
+        font-size: 16px;
+        max-width: 643px;
+    }
+
+    .choose-destination__images {
+        gap: 16px;
+        grid-template-areas:
+            'image-1'
+            'image-2'
+            'image-3'
+            'image-4'
+            'image-5'
+            'image-6'
+            'image-7';
+    }
+
+    .grid-img{
+       width: 100%;
+        height: 175px;
+    }
+    /* choose your destination section responsiveness ends here  */
 }
