--- a/style.css
+++ b/style.css
@@ -444,6 +444,25 @@ header {
 
 /* Deals and discount section styles starts here  */
 
+.deals-discount-wrapper{
+    margin-top: 95px;
+    margin-bottom: 48px;
+}
+
+
+.deals-discount__texts{
+    flex-direction: column;
+    text-align: center;
+}
+.deals-discount__texts h2{
+    margin-bottom: 24px;
+}
+
+.deals-discount__texts p{
+    max-width: 643px;
+    color: var(--highlight-text-color);
+}
+
 .deals-discount-background-wrapper {
     margin-top: 48px;
     padding: 55px;
@@ -465,46 +484,15 @@ header {
     background-image: url(Images/Deals1.png);
 }
 
-.deals-discount-background-wrapper.wrapper-2 {
+.deals-discount-background-wrapper.wrapper-2{
     justify-content: flex-start;
-    background-image: none;
+    background-image: url(Images/deals2.png);
 }
 
-.deals-discount-background-wrapper.wrapper-2::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(Images/Deals1.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    transform: scaleX(-1);
-    z-index: -1;
-}
-
-.deals-discount-wrapper{
-    margin-top: 95px;
-    margin-bottom: 48px;
-}
-
-.deals-discount__texts{
-    flex-direction: column;
-    text-align: center;
-}
-.deals-discount__texts h2{
-    margin-bottom: 24px;
-}
-
-.deals-discount__texts p{
-    max-width: 643px;
-    color: var(--highlight-text-color);
-}
 
 .deals-discount-card-wrapper{
     width: 579px;
-    height: 389px;
+    height: auto;
     padding: 50px;
     background-color: rgba(255, 255, 255, 0.8);
     border: none;
@@ -725,8 +713,11 @@ ________________________________________________________________________________
     /* choose your destination section responsiveness ends here  */
 
     /* why to choose us section responsiveness starts here */
+    
     .choose-us__wrapper {
         margin-top: 24px;
+        height: auto;
+        padding-bottom: 24px;
     }
 
     .choose-us__texts h2 {
@@ -771,4 +762,83 @@ ________________________________________________________________________________
         font-size: 14px;
         max-width: 271px;
     }
+
+    /* deals and discount (packages) section styles starts below  */
+    .deals-discount-wrapper{
+        margin-top: 0;
+        margin-bottom: 24px;
+    }
+
+    .card-top-icons{
+        flex-wrap: wrap;
+        max-width: 218px;
+        max-height: 64px;
+        margin-bottom: 16px;
+    }
+
+
+    .deals-discount__texts h2{
+        font-size: 20px;
+        margin-bottom: 16px;
+    }
+
+    .deals-discount__texts p{
+        max-width: 309px;
+        font-size: 14px;
+    }
+    .deals-discount-background-wrapper {
+        margin-top: 24px;
+        padding: 187px 16px 16px 16px;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .deals-discount-background-wrapper.wrapper-2::before {
+        background-size: cover;
+        background-position: center;
+    }
+
+    .deals-discount-card-wrapper{
+        width: 303px;
+        height: auto;
+        padding: 24px;
+    }
+
+    .deals-discount-card-wrapper h3{
+        font-size: 20px;
+        margin-top: 16px;
+        margin-bottom: 8px;
+    }
+
+    .deals-discount-card-wrapper>p{
+        max-width: 254px;
+        max-height: 42px;
+        font-size: 15px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin-bottom: 12px;
+    }
+
+    .deals-discount-card-wrapper h4{
+        font-size: 16px;
+        margin-bottom: 16px;
+    }
+
+    .card-top-icon{
+        margin-bottom: 16px;
+    }
+    .book-now{
+        width: 130px;
+        height: 40px;
+        font-size: 18px;
+        position: relative;
+        right: auto;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .packages-btn{
+       display: none;
+    }
+    /* details and discount (packages) section styles ends below  */
 }
