--- a/style.css
+++ b/style.css
@@ -550,7 +550,7 @@ header {
     transform: translateX(-50%);
 }
 
-/* Glimpse section styles start  */
+/* Glimpse section styles starts  */
 
 #glimpse-section {
     position: relative;
@@ -558,18 +558,24 @@ header {
     margin-bottom: 100px;
 }
 
+.glimpse-wrapper{
+    display: flex;
+    gap: 28px;
+    justify-content: space-between;
+}
+
 .glimpse__texts{
     height: auto;
 }
 .glimpse__texts h2 {
-    max-width: 448px;
+    width: 448px;
     height: 120px;
     margin-bottom: 24px;
     font-size: 40px;
 }
 
 .glimpse__texts p {
-    max-width: 532px;
+    width: 532px;
     height: 52px;
     margin-bottom: 24px;
 }
@@ -580,8 +586,8 @@ header {
 
 .glimpse__texts > ul > li {
     list-style:disc;
-    max-width: 518px;
-    height: 52px;
+    width: 518px;
+    max-height: 52px;
     margin-bottom: 16px;
     color: var(--highlight-text-color);
 }
@@ -592,11 +598,6 @@ header {
     margin-top: 16px;
 }
 
-.glimpse-wrapper{
-    display: flex;
-    gap: 28px;
-    justify-content: space-between;
-}
 
 .glimpse-video{
 
@@ -612,10 +613,6 @@ header {
     border: none;
     border-radius: 16px;
 
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; */
     padding: 24px;
     background-image: url(Images/MountainBangladesh.png);
 }
@@ -631,7 +628,6 @@ header {
     width: 276px;
     height: 72px;
     text-align: center;
-    /* margin-bottom: 107px; */
 }
 
 .flexible-container-outer{
@@ -686,6 +682,8 @@ header {
     width: 100%;
     padding-right: 24px;
 }
+
+/* glimpse section ends here  */
 
 /* --------------------------------------------------------------------------------------------------
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -979,4 +977,67 @@ ________________________________________________________________________________
        display: none;
     }
     /* details and discount (packages) section styles ends below  */
+
+    /* glimpse section responsiveness starts  */
+    #glimpse-section {
+        margin-top: 26px;
+        margin-bottom: 100px;
+    }
+
+    .glimpse-wrapper{
+        flex-direction: column;
+        gap: 24px;
+    }
+    .glimpse__texts{
+        width: 100%;
+    }
+    .glimpse__texts h2 {
+        width: 248px;
+        height: 72px;
+        margin-bottom: 16px;
+        font-size: 20px;
+    }
+
+    .glimpse__texts p {
+        max-width: 100%;
+        height: 52px;
+        margin-bottom: 42px;
+    }
+
+    .glimpse__texts > ul > li {
+        width: 100%;
+        height: 160px;
+    }
+
+    .btn-see-more{
+        margin-top: 24px;
+    }
+
+    .glimpse-video{
+        width: 100%;
+        height: 200px;
+    }
+
+    .glimpse-video>p{
+        top: 40%;
+        font-size: 20px;
+        width: 276px;
+        height: 60px;
+    }
+
+    .flexible-container-outer{
+        margin-bottom: 8px;
+    }
+
+    .left-contents{
+        width: 58px;
+        height: 20px;
+    }
+
+    .right-contents{
+        width: 85px;
+        height: 20px;
+    }
+
+    /* glimpse section responsiveness ends  */
 }
