--- a/style.css
+++ b/style.css
@@ -1086,7 +1086,7 @@ ________________________________________________________________________________
     /* glimpse section responsiveness starts  */
     #glimpse-section {
         margin-top: 26px;
-        margin-bottom: 100px;
+        margin-bottom: 24px;
     }
 
     .glimpse-wrapper{
@@ -1145,4 +1145,50 @@ ________________________________________________________________________________
     }
 
     /* glimpse section responsiveness ends  */
+    
+    /* newsletter section responsiveness starts  */
+    .newsletter-section-wrapper{
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    .newsletter-subscription-field{
+        width: 100%;
+        height: auto;
+        padding: 24px;
+        border-radius: 16px;
+    }
+
+    .newsletter-subscription-form h5{
+        font-size: 20px;
+        font-weight: 800;
+    }
+    
+    .newsletter-subscription-form p{
+        width: 270px;
+        height: 48px;
+    }
+
+    .newsletter-img{
+        width: 100%;
+        height: 300px;
+    }
+
+    .card-discount{
+        right: 5px;
+        bottom: 35px;
+        width: 214px;
+        height: 79px;
+    }
+
+    .card-discount p:nth-child(1){
+        font-size: 15px;
+    }
+
+    .card-discount p:nth-child(2){
+        font-size: 21px;
+    }
+    
+    /* newsletter section responsiveness ends  */
+
 }
