--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ main{
 
 /* Wrapper for layout */
 .wrapper {
-    max-width: 1170px;
+    width: 100%;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 135px 0 135px;
 }
 
 /* Common codes */
@@ -257,48 +257,56 @@ header {
 
 }
 
-/* Our tour plans styles */
+/* Our tour plans styles starts */
+
 #popular-tours{
-    margin-top: 75px;
+    margin-top: 100px;
 }
 
 .popular-tours-wrapper{
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    gap: 53px;
 }
 
 .popular-tours-article{
-    width: 550PX;
-    height: 465PX;
+    width: 55%;
+    height: auto;
 }
 
 .popular-tours-article h2{
-    padding-bottom: 24px;
+    margin-bottom: 24px;
 }
 
 .popular-tours-article p{
-    padding-bottom: 1.5rem;
+    margin-bottom: 24px;
     text-align: justify;
 }
 
 .popular-tours-lists{
-    padding-bottom: 1rem;
+   margin-bottom: 24px;
     padding-left: 20px;
 }
 
 .popular-tours-lists ul li{
     list-style: disc;
-    padding-bottom: 16px;
+    margin-bottom: 16px;
     color: var(--primary-text-color);
 }
 
+
 .popular-tours-img{
-    width: 540px;
+    width: 45%;
     height: 550px;
 }
 
+.popular-tours-img img{
+    width: 100%;
+    height: 100%;
+}
+
 .popular-tours-article button{
-    margin-top: 8px;
+    margin-top: 38px;
 }
 
 /* choose your destination section styles starts here  */
@@ -372,11 +380,11 @@ header {
 /* why to choose us style starts here  */
 .choose-us__wrapper{
     margin-top: 100px;
-    position: relative;
     height: auto;
-    overflow: hidden;
-    padding-bottom: 600px;
+    margin-bottom: 99px;
+    padding: 1px;
 }
+
 .choose-us__texts{
     flex-direction: column;
     text-align: center;
@@ -389,23 +397,25 @@ header {
 .choose-us__texts p{
     max-width: 643px;
     color: var(--highlight-text-color);
+    margin-bottom: 48px;
 }
 
 .choose-us__cards-wrapper{
-    position: relative;
-    margin-top: 48px;
     width: 100%;
-    height: auto;
+    display: flex;
+    gap: 24px;
+    margin-bottom: 24px;
 }
 
 .choose-us__card{
-    width: 561px;
+    width: 50%;
     height: 284px;
     border: none;
     border-radius: 16px;
     box-shadow: var(--primary-box-shadow);
     transition: transform 0.3s ease, color 0.3s ease;;
     cursor: pointer;
+    padding: 32px;
 }
 
 .choose-us__card:hover{
@@ -415,24 +425,31 @@ header {
 
 .card-1{
     background-color: #FFFBF7;
-    position: absolute;
-    right: auto;
-    top: 0;
-    left: 0;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .card-2{
     background-color: #F4FCFE;
-    position: absolute;
-    left: auto;
-    right: 0;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.card-3__wrapper{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .card-3{
     background-color: #FEF5F5;
-    position: absolute;
-    top: 308px;
-    bottom: 0;
-    left: 25%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .card-contents-wrapper{
@@ -460,7 +477,6 @@ header {
 /* Deals and discount section styles starts here  */
 
 .deals-discount-wrapper{
-    margin-top: 95px;
     margin-bottom: 48px;
 }
 
@@ -522,7 +538,7 @@ header {
 }
 
 .deals-discount-card-wrapper>p{
-    max-width: 425px;
+    width: 425px;
     margin-bottom: 16px;
 }
 
@@ -534,9 +550,9 @@ header {
 }
 
 .card-top-icons{
-    max-height: 24px;
+    width: 386px;
+    height: 24px;
     justify-content: space-between;
-    max-width: 386px;
     margin-bottom: 26px;
 }
 
@@ -544,6 +560,10 @@ header {
     gap: 8px;
 }
 
+.book-now{
+    width: 150px;
+    height: 52px;
+}
 
 .fw-icon{
     color: var(--primary-color);
@@ -578,17 +598,18 @@ header {
 }
 
 .glimpse__texts{
+    width: 45%;
     height: auto;
 }
 .glimpse__texts h2 {
-    width: 448px;
+    width: 65%;
     height: 120px;
     margin-bottom: 24px;
     font-size: 40px;
 }
 
 .glimpse__texts p {
-    width: 532px;
+    width: 95%;
     height: 52px;
     margin-bottom: 24px;
 }
@@ -599,8 +620,7 @@ header {
 
 .glimpse__texts > ul > li {
     list-style:disc;
-    width: 518px;
-    max-height: 52px;
+    width: 90%;
     margin-bottom: 16px;
     color: var(--highlight-text-color);
 }
@@ -616,7 +636,7 @@ header {
 
     position: relative;
 
-    width: 610px;
+    width: 55%;
     height: 424px;
 
     background-size: cover;
@@ -704,10 +724,11 @@ header {
     height: auto;
     display: flex;
     gap: 24px;
+    margin-bottom: 100px;
 }
 
 .newsletter-subscription-field{
-    width: 474px;
+    width: 35%;
     height: 422px;
     padding: 40px;
     border: 1px solid var(--primary-color);
@@ -750,7 +771,7 @@ header {
 
 .newsletter-img{
     position: relative;
-    width: 672px;
+    width: 65%;
     height: 422px;
     border: none;
     border-radius: 16px;
@@ -792,6 +813,58 @@ header {
 }
 /* Newsletter subscription styles ends */
 
+/* Footer section styles begin */
+.footer-section-wrapper{
+    width: 100%;
+    height: 502px;
+    padding: 0 284px 0 284px;
+    background-color: #F3F3F3;
+    flex-direction: column;
+}
+
+#footer-icon-img{
+    width: 40px;
+    height: 46px;
+}
+
+#icon-footer-text{
+    font-size: 32px;
+    height: 40px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.footer-paragraph{
+    width: 769px;
+    height: 52px;
+    margin-top: 15px;
+    margin-bottom: 32px;
+}
+
+.footer-paragraph p{
+    width: 100%;
+}
+
+.footer-icons{
+    gap: 32px;
+    margin-bottom: 50px;
+}
+
+.horizontal-row{
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.copyright p{
+    font-size: 16px;
+    font-weight: lighter;
+}
+
+
+/* Footer section styles end*/
 /* --------------------------------------------------------------------------------------------------
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 ______________________________________________________________________________________________ */
@@ -799,8 +872,9 @@ ________________________________________________________________________________
 /* Media query for screens below 600px */
 
 @media only screen and (max-width: 600px) {
+    
     .wrapper {
-        width: auto;
+        width: 100%;
         margin: 0 auto;
         padding: 0 20px 0 20px;
     }
@@ -958,7 +1032,6 @@ ________________________________________________________________________________
     .choose-us__wrapper {
         margin-top: 24px;
         height: auto;
-        padding-bottom: 24px;
     }
 
     .choose-us__texts h2 {
@@ -1006,14 +1079,13 @@ ________________________________________________________________________________
 
     /* deals and discount (packages) section styles starts below  */
     .deals-discount-wrapper{
-        margin-top: 0;
         margin-bottom: 24px;
     }
 
     .card-top-icons{
         flex-wrap: wrap;
-        max-width: 218px;
-        max-height: 64px;
+        width: 218px;
+        height: 64px;
         margin-bottom: 16px;
     }
 
@@ -1032,11 +1104,11 @@ ________________________________________________________________________________
         padding: 187px 16px 16px 16px;
         background-size: cover;
         background-position: center;
+        justify-content: center;
     }
 
-    .deals-discount-background-wrapper.wrapper-2::before {
-        background-size: cover;
-        background-position: center;
+    .deals-discount-background-wrapper.wrapper-2{
+        justify-content: center;
     }
 
     .deals-discount-card-wrapper{
@@ -1052,8 +1124,8 @@ ________________________________________________________________________________
     }
 
     .deals-discount-card-wrapper>p{
-        max-width: 254px;
-        max-height: 42px;
+        width: 254px;
+        height: 42px;
         font-size: 15px;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -1104,14 +1176,13 @@ ________________________________________________________________________________
     }
 
     .glimpse__texts p {
-        max-width: 100%;
+        width: 100%;
         height: 52px;
         margin-bottom: 42px;
     }
 
     .glimpse__texts > ul > li {
         width: 100%;
-        height: 160px;
     }
 
     .btn-see-more{
@@ -1190,5 +1261,50 @@ ________________________________________________________________________________
     }
     
     /* newsletter section responsiveness ends  */
+
+    /* footer section responsiveness begins */
+    .footer-section-wrapper{
+        height: 309px;
+        padding: 0 32px 0 32px;
+    }
+
+    #footer-icon-img{
+        width: 28px;
+        height: 33px;
+    }
+
+    #icon-footer-text{
+        font-size: 21px;
+        height: 27px;
+        gap: 3px;
+    }
+
+    .footer-paragraph{
+        width: 287px;
+        height: 96px;
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
+
+    .footer-paragraph p{
+        width: 100%;
+        font-size: 14px;
+    }
+
+    .footer-icons{
+        gap: 32px;
+        margin-bottom: 24px;
+    }
+
+    .horizontal-row{
+        margin-bottom: 24px;
+    }
+
+    .copyright p{
+        font-size: 14px;
+    }
+    
+    /* footer section responsiveness ends */
+
 
 }
